--- a/public/pages/teamtwo/labor.html
+++ b/public/pages/teamtwo/labor.html
@@ -186,7 +186,7 @@
 
                     <div class="lead">
                         Uns wurde gesagt, dass eine Kontaktperson Hinweise hinterlassen hat. Die Hinweise siehst du am
-                        Tisch.
+                        Tisch auf den Petrischalen. Irgendwie kenn ich dieses Muster...
                     </div>
 
                     <div class="dropdown">
