--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,22 @@
   <div id="about" class="d-flex flex-column justify-content-center align-items-center p-5">
     <div class="align-items-center font-weight-light text-center my-auto w-md-50" style="color:gainsboro">
       <h1 class="mb-3">ABOUT</h1>
-      <p>Escape-I3C ist ein Textbasiertes Escape-Game. Als Projekt im Seminar "Interaktionsdesign, Informationsverhalten und
-        Informationsvisualisierung in Zeiten der Corona-Krise" soll dieses Spiel einen Versuch starten, die erfolgreichen Escape-Room-Games zu
-        digitalisieren. Wir (Sebastien, Sabrina, Daniela und Marcus) haben dieses Spiel auf Basis eines gestellten und beantworteten Fragebogens 
-        konzipiert. 
+      <p>Bei Escape-I3C handelt es sich um ein textbasiertes Point'n'Click Escape-Game. Als Projekt im Seminar
+        "Interaktionsdesign,
+        Informationsverhalten und Informationsvisualisierung in Zeiten der Corona-Krise" soll dieses Spiel einen Versuch
+        starten, die erfolgreichen Escape-Room-Games zu digitalisieren. Wir (Sebastien, Sabrina, Daniela und Marcus)
+        haben dieses Spiel auf Basis des User-Center-Design Prozesses konzipiert und hoffen es macht euch genauso viel
+        Spaß wie uns.
       </p>
       <p>
 
+      </p>
+      <hr>
+      <p class="lead"> 
+        Das Spielprinzip ist ganz einfach:
+      </p>
+      <p>
+        Klicke auf Gegenstände, die du dir näher ansehen willst. Manchmal helfen dir auch die Icons unten am Bildschirm, um mehr zur Story oder Hinweise zu erfahren.
       </p>
     </div>
 
@@ -87,22 +96,18 @@
   <div id="story" class="d-flex flex-column justify-content-center align-items-center p-5">
     <div class="align-items-center font-weight-light text-center my-auto w-md-50" style="color:gainsboro">
       <h1 class="mb-3">STORY</h1>
-      <p>Tauche ein als Undercover-Agent</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione ex repellendus doloribus dolores explicabo,
-        illum facilis, pariatur velit fugit vel itaque eaque, veritatis illo enim laudantium. Esse repellat provident
-        atque!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id culpa officiis ut at odit. Vero voluptate facilis
-        fugiat praesentium ducimus cumque incidunt quo distinctio. Sint sit eligendi voluptates iure commodi!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum vitae provident dolore animi expedita non ipsa
-        cupiditate recusandae nulla saepe, perferendis exercitationem totam accusamus quisquam? Quam aut voluptas
-        sapiente
-        labore.
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga laudantium quo, rerum, ea consectetur explicabo
-        facere obcaecati perferendis qui placeat iste architecto error incidunt consequatur ex? Expedita nisi nobis
-        veritatis!
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, veniam culpa, ullam cupiditate illo cumque, enim
-        pariatur modi quaerat impedit fugit temporibus excepturi eligendi at nemo quam. Reiciendis, mollitia minus?
+      <p class="lead">Tauche ein als Undercover-Agent...</p>
+      <p>... in die Welt des COVID-19 Virus. Es gibt zwei Teams, den amerikanischen Agent
+        Burton mit seiner geheimen Task-Force und den russischen Agenten Putinski mit seinem KGB-Team. Ihr seid beide
+        auf mehr oder weniger auf der„geheimen“ Mission, den Täter und den Impfstoff oder das Gegengift für das
+        Corona-Virus zu finden. Auf der Suche danach werden ihr mit verschiedenen Laboren und Verschwörungstheoretikern
+        in Kontakt treten. Ob sie euch bei der Suche helfen werden, ist euch überlassen. Seid ihr bereit für ein
+        Abenteuer? Schafft ihr es alleine die Menschheit zu retten oder müssen sich die zwei Nationen verbinden und
+        werden es nur gemeinsam schaffen die Kranken wieder zu heilen? Finde es jetzt heraus :slight_smile:
       </p>
+      <hr>
+      <p class="lead">Und merke dir:</p>
+      <p>Manchmal helfen dir  Fehler auf den richtigen Weg.</p>
     </div>
   </div>
 
