--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
 
   <link rel="stylesheet" href="/assets/css/style.css">
 
@@ -83,11 +86,12 @@
 
       </p>
       <hr>
-      <p class="lead"> 
+      <p class="lead">
         Das Spielprinzip ist ganz einfach:
       </p>
       <p>
-        Klicke auf Gegenstände, die du dir näher ansehen willst. Manchmal helfen dir auch die Icons unten am Bildschirm, um mehr zur Story oder Hinweise zu erfahren.
+        Klicke auf Gegenstände, die du dir näher ansehen willst. Manchmal helfen dir auch die Icons unten am Bildschirm,
+        um mehr zur Story oder Hinweise zu erfahren.
       </p>
     </div>
 
@@ -103,11 +107,12 @@
         Corona-Virus zu finden. Auf der Suche danach werden ihr mit verschiedenen Laboren und Verschwörungstheoretikern
         in Kontakt treten. Ob sie euch bei der Suche helfen werden, ist euch überlassen. Seid ihr bereit für ein
         Abenteuer? Schafft ihr es alleine die Menschheit zu retten oder müssen sich die zwei Nationen verbinden und
-        werden es nur gemeinsam schaffen die Kranken wieder zu heilen? Finde es jetzt heraus :slight_smile:
+        werden es nur gemeinsam schaffen die Kranken wieder zu heilen? Finde es jetzt heraus
+        <i class="far fa-smile-beam"></i>
       </p>
       <hr>
       <p class="lead">Und merke dir:</p>
-      <p>Manchmal helfen dir  Fehler auf den richtigen Weg.</p>
+      <p>Manchmal helfen dir Fehler auf den richtigen Weg.</p>
     </div>
   </div>
 
