--- a/public/pages/teamtwo/labor.html
+++ b/public/pages/teamtwo/labor.html
@@ -156,12 +156,14 @@
                     </p>
                     <img src="/assets/img/LAB02-ETHANOL.jpg" style="width:100%; height: auto; max-width: 100%;">
                     <p>
-                        In Zeiten der Corona-Pandemie ist es nicht nur wichtig, sich die Hände regelmäßig und richtig zu waschen, sonder sie auch zu desinfizieren.
+                        In Zeiten der Corona-Pandemie ist es nicht nur wichtig, sich die Hände regelmäßig und richtig zu
+                        waschen, sonder sie auch zu desinfizieren.
                     </p>
                     <p>
                         Ein wichtiger Stoff im Desinfektionsmittel ist neben Isopropanol auch Ethanol.
                     </p>
-                    <p>Aber Desinfektionsmittel ist nicht gleich Desinfektionsmittel. Nicht alle Rezepturen wirken auch gegen SARS-CoV-2.</p>
+                    <p>Aber Desinfektionsmittel ist nicht gleich Desinfektionsmittel. Nicht alle Rezepturen wirken auch
+                        gegen SARS-CoV-2.</p>
                     <p>Da hilft nur, sich die Packung genau anzusehen und die Informationen gründlich durchzulesen.</p>
                 </div>
 
@@ -186,7 +188,7 @@
 
                     <div class="lead">
                         Uns wurde gesagt, dass eine Kontaktperson Hinweise hinterlassen hat. Die Hinweise siehst du am
-                        Tisch auf den Petrischalen. Irgendwie kenn ich dieses Muster...
+                        Tisch auf den Petrischalen. Irgendwie kommt mir dieses Muster bekannt vor...
                     </div>
 
                     <div class="dropdown">
@@ -260,7 +262,7 @@
 
     <div class="modal fade" id="blabla" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
 
                 <div class="modal-header">
@@ -302,13 +304,20 @@
                     </div>
 
                     <div class="typBezirk d-none">
-                        <div id="formBezirk" class="form-group">
-                            <label for="recipient-name" class="col-form-label">Unsere IT-Experten wollen zuerst die
+                        <div id="formBezirk" class="form-group"> <label for="recipient-name"
+                                class="col-form-label">Unsere IT-Experten wollen zuerst die
                                 Location prüfen. In welchen Stadtteil führt dich der Hinweis?</label>
+                            <img src="/assets/img/Berlin-Hinweis.png"
+                                style="width:100%; height: auto; max-width: 100%;">
+                            <p class="text-muted">Leider haben wir nur diesen Plan hier, es ist hilfreicher wenn du dir einen
+                                Besseren suchst.</p>
+
                             <div id="alertBezirkWrong" class="d-none" style="color:red; display: inline;">
                                 Unsere IT-Experten haben keine Auffälligkeiten dort entdeckt.
                             </div>
+
                             <input type="text" class="form-control" id="bezirkInput">
+
                         </div>
                     </div>
 
