Final before change

--- a/public/pages/teamone/gates.html
+++ b/public/pages/teamone/gates.html
@@ -32,6 +32,10 @@
             <button id="btn-gates" type="button" class="btn btn-primary" data-toggle="modal"
                 data-target="#gates">Gates</button>
         </div>
+        <div class="copyright">
+            <p>Copyright: https://commons.wikimedia.org/wiki/File:Bill_Gates_World_Economic_Forum_2013.jpg</p>
+            <p>Lizenz: https://creativecommons.org/licenses/by-sa/2.0/deed.en</p>
+        </div>
         <div class="background">
 
         </div>
