--- a/public/pages/teamone/labor.html
+++ b/public/pages/teamone/labor.html
@@ -85,7 +85,8 @@
           <div id="mainAfter" class="d-none">
             <p class="lead">Das ergibt Sinn!</p-lead>
             <p>"Triff mich um 19 Uhr"... hmm... aber wen?</p>
-            <p>Durch deine Hilfe, konnte man einen weiteren DNA-Strang entschlüsseln, es kam eine Koordinaten-Angabe heraus.</p>
+            <p>Durch deine Hilfe, konnte man einen weiteren DNA-Strang entschlüsseln, es kam eine Koordinaten-Angabe
+              heraus.</p>
             <a href="gates.html">Den Hinweisen folgen!</a>
           </div>
         </div>
@@ -186,7 +187,11 @@
         </div>
         <div class="modal-body">
           <p>
-            Du musst die Hinweise in der DNA entschlüsseln, um Zugang zum geheimen Treffen zu erlangen!
+            Als du immer wieder Fledermäuse auf einem Markt beobachtet hast, musstest du dem auf den Grund gehen und
+            hast die DNA sequenziert. Diese Sequenz scheint besonders zu sein.
+          </p>
+          <p>
+            Entschlüssel die Sequenz!
           </p>
           <p>Hilfe bekommst du angeblich im Nebenraum, den Code dafür musst du herausfinden.
             Beeil dich!
