--- a/public/pages/teamtwo/labor.html
+++ b/public/pages/teamtwo/labor.html
@@ -130,6 +130,7 @@
                     <p class="lead">
                         Irgendwelche Code-Zeilen. Ich denke nicht, dass das weiterhilft.
                     </p>
+                    <p class="lead">Mittendrin: die Justitia. Hat Sie was mit der Lösung zu tun?</p>
                     <img src="/assets/img/LAB02-BLATT.jpg" style="width:100%; height: auto; max-width: 100%;">
                 </div>
 
@@ -165,6 +166,8 @@
                     <p>Aber Desinfektionsmittel ist nicht gleich Desinfektionsmittel. Nicht alle Rezepturen wirken auch
                         gegen SARS-CoV-2.</p>
                     <p>Da hilft nur, sich die Packung genau anzusehen und die Informationen gründlich durchzulesen.</p>
+
+                    <p class="lead">Das Wichtigste jedoch: Trinkst du es in hoher Konzentration und hohen Mengen, kannst du erblinden!</p>
                 </div>
 
                 <div id="mainModalFooter" class="modal-footer">
@@ -307,10 +310,7 @@
                         <div id="formBezirk" class="form-group"> <label for="recipient-name"
                                 class="col-form-label">Unsere IT-Experten wollen zuerst die
                                 Location prüfen. In welchen Stadtteil führt dich der Hinweis?</label>
-                            <img src="/assets/img/Berlin-Hinweis.png"
-                                style="width:100%; height: auto; max-width: 100%;">
-                            <p class="text-muted">Leider haben wir nur diesen Plan hier, es ist hilfreicher wenn du dir einen
-                                Besseren suchst.</p>
+                            <p>Falls du einen Plan von Berlin brauchst: <a href=" https://commons.wikimedia.org/wiki/File:U-Bahn_Berlin_before_05-2018.png" target="_blank">Hier</a></p>
 
                             <div id="alertBezirkWrong" class="d-none" style="color:red; display: inline;">
                                 Unsere IT-Experten haben keine Auffälligkeiten dort entdeckt.
